--- a/style.css
+++ b/style.css
@@ -3091,158 +3091,6 @@ hr {
 	}
 }
 
-.login-wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-bottom: 140px;
-}
-
-@media (min-width: 768px) {
-	.login-wrapper {
-		align-items: flex-start;
-	}
-}
-
-@media (min-width: 992px) {
-	.login-wrapper {
-		margin-bottom: 70px;
-	}
-}
-
-.login-wrapper p {
-	align-self: flex-start;
-	margin-bottom: 34px;
-}
-
-@media (min-width: 576px) {
-	.login-wrapper p {
-		align-self: center;
-	}
-}
-
-@media (min-width: 768px) {
-	.login-wrapper p {
-		align-self: flex-start;
-		margin-bottom: 44px;
-	}
-}
-
-.login-title {
-	margin-bottom: 10px;
-	align-self: flex-start;
-	font-size: clamp(0.938rem, calc(0.833rem + 0.52vw), 1.25rem);
-	line-height: 1.733;
-}
-
-@media (min-width: 576px) {
-	.login-title {
-		align-self: center;
-	}
-}
-
-@media (min-width: 768px) {
-	.login-title {
-		align-self: flex-start;
-		margin-bottom: 20px;
-	}
-}
-
-@media (min-width: 992px) {
-	.login-title {
-		font-weight: 400;
-	}
-}
-
-.login-registration::after {
-	top: -44px;
-}
-
-.social-login {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-.social-login > p {
-	align-self: center;
-	font-size: 14px;
-	line-height: 1.5;
-	color: #000;
-}
-
-.social-login ul {
-	margin-bottom: 30px;
-	display: flex;
-	flex-wrap: wrap;
-	gap: 40px;
-}
-
-@media (min-width: 376px) {
-	.social-login ul {
-		gap: 52px;
-	}
-}
-
-.social-login ul li {
-	line-height: 0;
-}
-
-.social-login > a {
-	color: #5d6970;
-}
-
-.registration-wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-bottom: 160px;
-}
-
-@media (min-width: 768px) {
-	.registration-wrapper {
-		align-items: flex-start;
-	}
-}
-
-@media (min-width: 992px) {
-	.registration-wrapper {
-		margin-bottom: 50px;
-	}
-}
-
-.registration-wrapper p {
-	align-self: flex-start;
-	margin-bottom: 34px;
-}
-
-@media (min-width: 576px) {
-	.registration-wrapper p {
-		align-self: center;
-	}
-}
-
-@media (min-width: 768px) {
-	.registration-wrapper p {
-		align-self: flex-start;
-		margin-bottom: 44px;
-	}
-}
-
-.registration-wrapper .social-login > p {
-	align-self: center;
-}
-
-.registration-wrapper .social-login ul {
-	margin-bottom: 0px;
-}
-
-.checkbox {
-	align-self: flex-start;
-	margin-bottom: 26px;
-	flex-basis: 100%;
-}
-
 .footer-personal {
 	position: relative;
 	width: 100vw;
@@ -3498,6 +3346,211 @@ hr {
 		line-height: 1.125;
 		padding: 7.5px 50px;
 	}
+}
+
+.read-more__section {
+	padding-top: 40px;
+	padding-bottom: 70px;
+}
+
+.read-more__section .blog-content > a > picture > img {
+	max-width: 390px;
+	width: 100%;
+	height: 210px;
+	object-fit: cover;
+	border-radius: 15px;
+	margin-bottom: 20px;
+}
+
+.read-more__section h3 {
+	margin-bottom: 18px;
+}
+
+.read-more__title {
+	margin-bottom: 38px;
+}
+
+.loading-screen {
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #fff;
+	z-index: 1000;
+}
+
+/* Стили для изображения загрузки */
+.loading-screen img {
+	max-width: 50%;
+	max-height: 50%;
+	animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.login-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 140px;
+}
+
+@media (min-width: 768px) {
+	.login-wrapper {
+		align-items: flex-start;
+	}
+}
+
+@media (min-width: 992px) {
+	.login-wrapper {
+		margin-bottom: 70px;
+	}
+}
+
+.login-wrapper p {
+	align-self: flex-start;
+	margin-bottom: 34px;
+}
+
+@media (min-width: 576px) {
+	.login-wrapper p {
+		align-self: center;
+	}
+}
+
+@media (min-width: 768px) {
+	.login-wrapper p {
+		align-self: flex-start;
+		margin-bottom: 44px;
+	}
+}
+
+.login-title {
+	margin-bottom: 10px;
+	align-self: flex-start;
+	font-size: clamp(0.938rem, calc(0.833rem + 0.52vw), 1.25rem);
+	line-height: 1.733;
+}
+
+@media (min-width: 576px) {
+	.login-title {
+		align-self: center;
+	}
+}
+
+@media (min-width: 768px) {
+	.login-title {
+		align-self: flex-start;
+		margin-bottom: 20px;
+	}
+}
+
+@media (min-width: 992px) {
+	.login-title {
+		font-weight: 400;
+	}
+}
+
+.login-registration::after {
+	top: -44px;
+}
+
+.social-login {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.social-login > p {
+	align-self: center;
+	font-size: 14px;
+	line-height: 1.5;
+	color: #000;
+}
+
+.social-login ul {
+	margin-bottom: 30px;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 40px;
+}
+
+@media (min-width: 376px) {
+	.social-login ul {
+		gap: 52px;
+	}
+}
+
+.social-login ul li {
+	line-height: 0;
+}
+
+.social-login > a {
+	color: #5d6970;
+}
+
+.registration-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 160px;
+}
+
+@media (min-width: 768px) {
+	.registration-wrapper {
+		align-items: flex-start;
+	}
+}
+
+@media (min-width: 992px) {
+	.registration-wrapper {
+		margin-bottom: 50px;
+	}
+}
+
+.registration-wrapper p {
+	align-self: flex-start;
+	margin-bottom: 34px;
+}
+
+@media (min-width: 576px) {
+	.registration-wrapper p {
+		align-self: center;
+	}
+}
+
+@media (min-width: 768px) {
+	.registration-wrapper p {
+		align-self: flex-start;
+		margin-bottom: 44px;
+	}
+}
+
+.registration-wrapper .social-login > p {
+	align-self: center;
+}
+
+.registration-wrapper .social-login ul {
+	margin-bottom: 0px;
+}
+
+.checkbox {
+	align-self: flex-start;
+	margin-bottom: 26px;
+	flex-basis: 100%;
 }
 
 @media (min-width: 576px) {
@@ -3774,7 +3827,7 @@ hr {
 
 @media (min-width: 1400px) {
 	.tabcontainer .tabcontent__plan .subscribe-block__wrapper {
-		gap: clamp(1.875rem, calc(0.192rem + 1.92vw), 2.5rem);
+		gap: 25px;
 	}
 }
 
@@ -3943,7 +3996,7 @@ hr {
 	justify-content: space-around;
 }
 
-.rating input[type="radio"] {
+.rating input[type='radio'] {
 	display: none;
 }
 
@@ -3957,7 +4010,7 @@ hr {
 	cursor: pointer;
 }
 
-.rating input[type="radio"]:checked ~ label {
+.rating input[type='radio']:checked ~ label {
 	direction: ltr;
 	background-image: url("/resources/svg/Starfull.svg");
 }
@@ -4724,59 +4777,6 @@ hr {
 @media (max-width: 991px) {
 	.post-page .read-more__section {
 		display: none;
-	}
-}
-
-.read-more__section {
-	padding-top: 40px;
-	padding-bottom: 70px;
-}
-
-.read-more__section .blog-content > a > picture > img {
-	max-width: 390px;
-	width: 100%;
-	height: 210px;
-	object-fit: cover;
-	border-radius: 15px;
-	margin-bottom: 20px;
-}
-
-.read-more__section h3 {
-	margin-bottom: 18px;
-}
-
-.read-more__title {
-	margin-bottom: 38px;
-}
-
-.loading-screen {
-	position: fixed;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	width: 100%;
-	height: 100%;
-	background-color: #fff;
-	z-index: 1000;
-}
-
-/* Стили для изображения загрузки */
-.loading-screen img {
-	max-width: 50%;
-	max-height: 50%;
-	animation: rotate 2s linear infinite;
-}
-
-@keyframes rotate {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
 	}
 }
 
